<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/new_quiz"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/take_quiz" />
        <item
            android:id="@+id/scores"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/scores" />
        <item
            android:id="@+id/contribute"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/contribute" />
        <item
            android:id="@+id/appreciation"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/attributes" />
    </group>

    <item android:title="@string/premium">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
