<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginTop="40dp"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <EditText
            android:hint="@string/subject_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contribution_subject_name" />
        <EditText
            android:id="@+id/contribution_question_text"
            android:hint="@string/question"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="textMultiLine"
            android:ems="10"/>
        <EditText
            android:hint="@string/source_code"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/contribution_source_code" />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/available_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:textIsSelectable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/contribution_option_one_text"
                android:hint="@string/option_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:textIsSelectable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/contribution_option_two_text"
                android:hint="@string/option_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:textIsSelectable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/contribution_option_three_text"
                android:hint="@string/option_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:textIsSelectable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/contribution_option_four_text"
                android:hint="@string/option_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/contribution_difficulty_text"
            android:hint="@string/difficulty_level_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/contribution_input_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/contribution_explanation_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/explanation"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/contribution_hint_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/hint_text"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/contribution_name_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/send"
            android:id="@+id/contributor_sendButton"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>