<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_marginTop="30dp">
    <LinearLayout
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <com.google.android.gms.ads.AdView
                android:id="@+id/topPageAdview"
                ads:adSize="BANNER"
                ads:adUnitId="@string/topPage_ad_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/timer_textView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="58dp"
                android:layout_marginStart="58dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contributor_text"
                android:id="@+id/contributor_textView"
                android:layout_below="@+id/timer_textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_text"
                android:id="@+id/question_textView"
                android:layout_margin="10dp"
                android:layout_below="@+id/contributor_textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <WebView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_codeWebView"
                android:background="@android:color/transparent"
                android:layout_margin="10dp"
                android:layout_below="@+id/question_textView"
                android:layout_alignLeft="@+id/question_textView"
                android:layout_alignStart="@+id/question_textView" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_codeWebView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:id="@+id/radioGroup">
                <RadioButton
                    android:id="@+id/question_option_oneRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/question_option_twoRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/question_option_threeRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/question_option_fourRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/use_input_checkBox"
                    android:text="@string/use_text_box" />
                <EditText
                    android:drawableLeft="@android:drawable/ic_menu_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/chosen_option_editText"
                    android:hint="@string/answerHint"
                    android:visibility="invisible"
                    android:layout_gravity="center_horizontal" />
                <com.google.android.gms.ads.AdView
                    android:id="@+id/footPageAdview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ads:adUnitId="@string/footnote_banner_ad_unit"
                    ads:adSize="BANNER">
                </com.google.android.gms.ads.AdView>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/questionIndex"
                android:text="@string/next"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/question_textView"
                android:layout_alignEnd="@+id/question_textView" />
        </RelativeLayout>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint"
                android:id="@+id/hintButton"
                android:contentDescription="@string/hint"
                android:layout_gravity="left|top" />
            <Button
                android:contentDescription="@string/next"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/nextButton"
                android:layout_gravity="right|top" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>